--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="header">
       <img src="./eisenhower-matrix.jpg" alt="eisenhower matrix image">
       <a class="more-information" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
@@ -14,7 +14,7 @@
       <p id="add-new-task">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text">
+          <input id="new-task" class="task-text" type="text">
           <button>Add</button>
         </div>
       </p>
@@ -22,8 +22,8 @@
       <ul id="incomplete-tasks">
         <li>
           <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
+          <label class="task-text">Pay Bills</label>
+          <input type="text" class="task-text">
           <button class="edit">Edit</button>
           <button class="delete">
             <img src="./remove.svg" alt="delete button">
@@ -31,8 +31,8 @@
         </li>
         <li class="edit-mode">
           <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
+          <label class="task-text">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task-text">
           <button class="edit">Save</button>
           <button class="delete">
             <img src="./remove.svg" alt="delete button">
@@ -43,8 +43,8 @@
       <ul id="completed-tasks">
         <li>
           <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
+          <label class="task-text">See the Doctor</label>
+          <input type="text" class="task-text">
           <button class="edit">Edit</button>
           <button class="delete">
             <img src="./remove.svg" alt="delete button">
