--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <img src="./eisenhower-matrix.jpg" alt="eisenhower matrix image">
       <a class="more-information" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
+    <div class="main">
       <p id="add-new-task">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
