--- a/index.html
+++ b/index.html
@@ -5,49 +5,49 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="page">
     <div class="header">
-      <img src="./eisenhower-matrix.jpg" alt="eisenhower matrix image">
+      <img class="header-image" src="./eisenhower-matrix.jpg" alt="eisenhower matrix image">
       <a class="more-information" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main">
       <p id="add-new-task">
-        <label for="new-task">Add Item</label>
+        <label for="new-task" class="task-label">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task" class="task-text" type="text">
-          <button>Add</button>
+          <input id="new-task" class="task-text task-input" type="text">
+          <button class="task-button">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task-text">Pay Bills</label>
-          <input type="text" class="task-text">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="delete button">
+      <h3 class="section-title">Todo</h3>
+      <ul class="task-list" id="incomplete-tasks">
+        <li class="task-item">
+          <input type="checkbox" class="task-input">
+          <label class="task-text task-label">Pay Bills</label>
+          <input type="text" class="task-text task-input">
+          <button class="edit task-button">Edit</button>
+          <button class="delete task-button">
+            <img class="button-image" src="./remove.svg" alt="delete button">
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task-text">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task-text">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="delete button">
+        <li class="edit-mode task-item">
+          <input type="checkbox" class="task-input">
+          <label class="task-text task-label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task-text task-input">
+          <button class="edit task-button">Save</button>
+          <button class="delete task-button">
+            <img class="button-image" src="./remove.svg" alt="delete button">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task-text">See the Doctor</label>
-          <input type="text" class="task-text">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="delete button">
+      <h3 class="section-title">Completed</h3>
+      <ul class="task-list" id="completed-tasks">
+        <li class="task-item">
+          <input class="task-input" type="checkbox" checked>
+          <label class="task-text task-label">See the Doctor</label>
+          <input type="text" class="task-text task-input">
+          <button class="edit task-button">Edit</button>
+          <button class="delete task-button">
+            <img class="button-image" src="./remove.svg" alt="delete button">
           </button>
         </li>
       </ul>
