--- a/index.html
+++ b/index.html
@@ -6,52 +6,56 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <div class="header">
+    <header class="header">
       <img class="header-image" src="./eisenhower-matrix.jpg" alt="eisenhower matrix image">
       <a class="more-information" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main">
-      <p id="add-new-task">
-        <label for="new-task" class="task-label">Add Item</label>
+    </header>
+    <main class="main">
+      <section id="add-new-task">
+        <h1 class="task-label new-task">Add Item</h1>
         <div class="task-row-wrapper">
           <input id="new-task" class="task-text task-input" type="text">
           <button class="task-button">Add</button>
         </div>
-      </p>
-      <h3 class="section-title">Todo</h3>
-      <ul class="task-list" id="incomplete-tasks">
-        <li class="task-item">
-          <input type="checkbox" class="task-input">
-          <label class="task-text task-label">Pay Bills</label>
-          <input type="text" class="task-text task-input">
-          <button class="edit task-button">Edit</button>
-          <button class="delete task-button">
-            <img class="button-image" src="./remove.svg" alt="delete button">
-          </button>
-        </li>
-        <li class="edit-mode task-item">
-          <input type="checkbox" class="task-input">
-          <label class="task-text task-label">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task-text task-input">
-          <button class="edit task-button">Save</button>
-          <button class="delete task-button">
-            <img class="button-image" src="./remove.svg" alt="delete button">
-          </button>
-        </li>
-      </ul>
-      <h3 class="section-title">Completed</h3>
-      <ul class="task-list" id="completed-tasks">
-        <li class="task-item">
-          <input class="task-input" type="checkbox" checked>
-          <label class="task-text task-label">See the Doctor</label>
-          <input type="text" class="task-text task-input">
-          <button class="edit task-button">Edit</button>
-          <button class="delete task-button">
-            <img class="button-image" src="./remove.svg" alt="delete button">
-          </button>
-        </li>
-      </ul>
-    </div>
+      </section>
+      <section>
+        <h2 class="section-title">Todo</h2>
+        <ul class="task-list" id="incomplete-tasks">
+          <li class="task-item">
+            <input type="checkbox" class="task-input">
+            <label class="task-text task-label">Pay Bills</label>
+            <input type="text" class="task-text task-input">
+            <button class="edit task-button">Edit</button>
+            <button class="delete task-button">
+              <img class="button-image" src="./remove.svg" alt="delete button">
+            </button>
+          </li>
+          <li class="edit-mode task-item">
+            <input type="checkbox" class="task-input">
+            <label class="task-text task-label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task-text task-input">
+            <button class="edit task-button">Save</button>
+            <button class="delete task-button">
+              <img class="button-image" src="./remove.svg" alt="delete button">
+            </button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3 class="section-title">Completed</h3>
+        <ul class="task-list" id="completed-tasks">
+          <li class="task-item">
+            <input class="task-input" type="checkbox" checked>
+            <label class="task-text task-label">See the Doctor</label>
+            <input type="text" class="task-text task-input">
+            <button class="edit task-button">Edit</button>
+            <button class="delete task-button">
+              <img class="button-image" src="./remove.svg" alt="delete button">
+            </button>
+          </li>
+        </ul>
+      </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
